--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-          content="Temukan undangan pernikahan simpel, menarik, dan kekinian untuk hari istimewa Anda.">
+          content="Resepsi Wedding Muhammad Tomi dan Fira Kamelia.">
     <meta name="keywords"
-          content="undangan pernikahan, template undangan, wedding invitation, desain undangan pernikahan, contoh undangan pernikahan HTML, CSS, JavaScript">
+          content="Resepsi Wedding Muhammad Tomi dan Fira Kamelia">
     <meta name="author" content="Muhammad Tomi">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Wedding Fira Tomi - Temukan Undangan Pernikahan Simpel dan Kekinian">
+    <meta property="og:title" content="Wedding Fira Tomi - Resepsi Wedding Muhammad Tomi dan Fira Kamelia">
     <meta property="og:description"
-          content="Temukan undangan pernikahan simpel, menarik, dan kekinian untuk hari istimewa Anda.">
+          content="Resepsi Wedding Muhammad Tomi dan Fira Kamelia.">
     <meta property="og:image"
           content="https://muhammadtomi.github.io/Und.Weddingfiratomi//src/assets/images/galery2.jpeg">
     <meta property="og:url" content="https://muhammadtomi.github.io/Und.Weddingfiratomi">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="Wedding Fira Tomi - Temukan Undangan Pernikahan Simpel dan Kekinian">
+    <meta property="twitter:title" content="Wedding Fira Tomi - Resepsi Wedding Muhammad Tomi dan Fira Kamelia">
     <meta property="twitter:description"
-          content="Temukan undangan pernikahan simpel, menarik, dan kekinian untuk hari istimewa Anda.">
+          content="Resepsi Wedding Muhammad Tomi dan Fira Kamelia.">
     <meta property="twitter:image"
           content="hhttps://muhammadtomi.github.io/Und.Weddingfiratomi/src/assets/images/galery2.jpeg">
 
